<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/my_gradient"
    android:padding="10dp"
    tools:context=".LoginActivity">
    
    <ImageView
        android:id="@+id/search_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:transitionName="logo_image"
        android:background="@drawable/search"/>

    <TextView
        android:id="@+id/welcome_text"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:text="@string/welcome_text"
        android:transitionName="logo_text"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/sign_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:text="@string/sign_in"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/white"
            android:transitionName="username"
            android:hint="@string/hint_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:transitionName="password"
            android:hint="@string/hint_password"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/white"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/forgotPas_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:elevation="0dp"
            android:fontFamily="@font/antic"
            android:text="@string/forgot_password"
            android:textStyle="bold" />

        <Button
            android:id="@+id/signin_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_sign_in"
            android:background="#000"
            android:textColor="#fff"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"/>

        <Button
            android:id="@+id/signup_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:elevation="0dp"
            android:fontFamily="@font/antic"
            android:text="@string/new_user"
            android:textStyle="bold" />

    </LinearLayout>



</LinearLayout>