<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".activities.ForgotPasswordSuccessMessageActivity">

    <TextView
        android:id="@+id/success_message_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        android:fontFamily="@font/muli_black"
        android:gravity="center"
        android:text="@string/password_nupdated"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="37sp" />


    <ImageView
        android:id="@+id/success_message_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        android:src="@drawable/confirm" />


    <TextView
        android:id="@+id/success_message_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/muli"
        android:gravity="center"
        android:text="@string/has_been_updated"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <Button
        android:id="@+id/login_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        android:text="@string/login"
        android:textColor="@color/white" />

</LinearLayout>