<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".activities.SetNewPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_arrow_back" />


        <ImageView
            android:id="@+id/set_new_password_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="-10dp"
            android:src="@drawable/reset_password" />


        <TextView
            android:id="@+id/set_new_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/muli_black"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/new_ncredentials"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="37sp" />


        <TextView
            android:id="@+id/set_new_password_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli"
            android:gravity="center"
            android:text="@string/identity_verified"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:hint="@string/new_password"
                android:textColorHint="@color/black"
                app:boxBackgroundColor="@color/magnolia"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:startIconDrawable="@drawable/ic_security"
                app:startIconTint="@color/black">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/new_password"
                android:layout_marginTop="10dp"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/black"
                app:boxBackgroundColor="@color/magnolia"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:startIconDrawable="@drawable/ic_security"
                app:startIconTint="@color/black">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />


            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/set_new_password_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/confirm_password"
                android:layout_marginTop="20dp"
                android:background="@color/black"

                android:text="@string/update" />


        </RelativeLayout>


    </LinearLayout>

</ScrollView>