<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgotPasswordActivity"
    android:background="@color/white"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back"
            android:padding="5dp" />

        <ImageView
            android:id="@+id/forget_password_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="-10dp"
            android:src="@drawable/password" />


        <TextView
            android:id="@+id/forget_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:textStyle="bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/forgot_npassword"
            android:fontFamily="@font/muli_black"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="37sp" />


        <TextView
            android:id="@+id/forget_password_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli"
            android:gravity="center"
            android:text="@string/provideAcc"
            android:textAlignment="center"
            android:textSize="16sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                app:boxBackgroundColor="@color/magnolia"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                android:hint="@string/email"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                android:textColorHint="@color/black">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null" />


            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/forget_password_next_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@color/black"
                android:text="@string/next"
                android:textColor="@color/white" />


        </RelativeLayout>

    </LinearLayout>


</ScrollView>